# my-agent-memory

./: .gitignore  claude-code-mcp.json  my-agent-memory-architecture.html  pyproject.toml
.github/workflows/: deploy.yml
docs/: README.md  architecture.md  implementation.md  iteration-summary.md  prompt.md  review.md  roadmap.md  v1-hanako.md  v1-hermes.md
docs/progress/: 2026-05-28.md  pi-code-event-plan.md
js/: hermes-provider.js
scripts/: benchmark_vec.py
src/hermes_memory/: __init__.py
src/hermes_memory_v2/: __init__.py  cli.py  conflicts.py  db.py  dreaming.py  embed.py  hot_layer.py  migrate.py  provider.py  search.py  serve.py  store.py  validate.py
src/hermes_memory_v2/providers/: hanako.py
src/hermes_memory_v2/static/: dashboard.html
src/my_agent_memory/: __init__.py  cli.py  config.py  conflicts.py  db.py  dreaming.py  embed.py  hot_layer.py  llm.py  mcp_server.py  memory_types.py  migrate.py  patrol.py  rag.py  reranker.py  schema.py  scoring.py  search.py  serve.py  store.py  tag_graph.py  validate.py
src/my_agent_memory/extensions/pi-memory/: memory-client.ts  package.json  pi-memory.ts  types.ts
src/my_agent_memory/providers/: __init__.py  base.py  hanako.py  hermes.py
src/my_agent_memory/static/: dashboard.html
tests/: test_hot_layer.py  test_integration.py  test_memory_types.py  test_scoring.py  test_search_rrf.py  test_tag_enhancement.py  test_tag_graph.py  test_v1_compat.py  test_validate.py
