[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-agent-memory"
version = "2.0.0"
description = "Multi-agent shared memory system — SQLite + FTS5 + vector search"
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec>=0.1.9",
]

[project.scripts]
my-agent-memory = "my_agent_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
my_agent_memory = ["static/*"]
